[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "nlbin"
version = "0.2.2"
description = "Generate binary and normalized versions of a set of input images using OCRopus nlbin algorithm."
readme = "README.md"
keywords = []
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">= 3.11"
authors = [
  { name="Janik Haitz", email="jahtz.dev@proton.me" },
  { name = "Centre for Philology and Digitality (ZPD), University of Würzburg" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "click ~= 8.1.8",
    "rich ~= 14.0.0",
    "pillow ~= 11.2.1",
    "numpy ~= 2.2.5",
    "scipy ~= 1.15.2"
]

[project.urls]
Homepage = "https://www.uni-wuerzburg.de/zpd/"
Repository = "https://github.com/jahtz/nlbin"

[project.optional-dependencies]
cuda11 = ["cupy-cuda11x"]
cuda12 = ["cupy-cuda12x"]
rocm4_3 = ["cupy-rocm-4-3"]
rocm5_0 = ["cupy-rocm-5-0"]

[project.scripts]
nlbin = "nlbin.cli:cli"
